[MAG-4] Api integration, Scanner Cubit

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -27,5 +27,13 @@
     "scannerEntryActionButtonText": "Scan Code",
     "@scannerEntryActionButtonText": {
         "description": "ScannerEntry Home action button text"
+    },
+    "qrScannerScanningSuccess": "Item Found!",
+    "@qrScannerScanningSuccess": {
+        "description": "Qr scanner bottom text on success"
+    },
+    "qrScannerScanningProgress": "Scanning",
+    "@qrScannerScanningProgress": {
+        "description": "Qr scanner bottom text on scanning process"
     }
 }
